feat: add user email and email verification email
